--- a/packages/mdc-tabs/package.json
+++ b/packages/mdc-tabs/package.json
@@ -17,6 +17,10 @@
   },
   "dependencies": {
     "@material/base": "^0.1.2",
-    "@material/ripple": "^0.4.0"
+    "@material/ripple": "^0.4.0",
+    "@material/animation": "^0.1.5",
+    "@material/typography": "^0.2.1",
+    "@material/rtl": "^0.1.3",
+    "@material/theme": "^0.1.4"
   }
 }
